notebook: Update notebook to also save local segmentations

--- a/vocspectraldropout/notebooks/notebook.ipynb
+++ b/vocspectraldropout/notebooks/notebook.ipynb
@@ -36,7 +36,11 @@
    "outputs": [],
    "source": [
     "import train_semantic_segmentation as semseg\n",
-    "from train_semantic_segmentation import call_many, save_segmentations_for_image"
+    "from train_semantic_segmentation import (\n",
+    "    call_many,\n",
+    "    save_segmentations_for_image,\n",
+    "    save_interesting_images\n",
+    ")"
    ]
   },
   {
@@ -172,10 +176,16 @@
     "                                                             \"image_{}.png\".format(i)\n",
     "                                                         ))\n",
     "                            for i in range(0, 3)]\n",
-    "                      ),\n",
-    "                     save_callback=None,\n",
-    "                     start_epoch=0,\n",
-    "                     best_accumulated_miou=0)"
+    "                     ),\n",
+    "                     epoch_end_callback=call_many(\n",
+    "                          save_model_on_better_miou(\"saved/model.pt\",\n",
+    "                                                    best_accumulated_miou),\n",
+    "                          save_interesting_images(os.path.join(\"logs\",\n",
+    "                                                               \"interesting\",\n",
+    "                                                               \"image.png\"),\n",
+    "                                                  device)\n",
+    "                     ),\n",
+    "                     start_epoch=0)"
    ]
   }
  ],
