plotting: Allow setting EXPERIMENT in environment

--- a/vocspectraldropout/notebooks/plotting.ipynb
+++ b/vocspectraldropout/notebooks/plotting.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXPERIMENT = \"everything\"\n",
+    "EXPERIMENT = os.environ.get(\"EXPERIMENT\", \"None\")\n",
     "INPUT_DIR = os.path.expanduser(\"~/Downloads/experiments/{}\").format(EXPERIMENT)\n",
     "OUTPUT_DIR = \"reports/{}\".format(EXPERIMENT)"
    ]
