plotting: Be a little bit smarter on how we generate summaries of training
We actually want to find our best epoch in terms of min/max and then
generate the statistics out of all the batches in that epoch.

--- a/vocspectraldropout/notebooks/plotting.ipynb
+++ b/vocspectraldropout/notebooks/plotting.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_lineplot(dataset, bbox=None, **kwargs):\n",
+    "def generate_lineplot(dataset, bbox=None, summary_func='max', **kwargs):\n",
     "    transposed = list(zip(*dataset))\n",
     "    grouped_by_epoch = [\n",
     "        {str(i): r for i, r in enumerate(result)}\n",
@@ -190,8 +190,18 @@
     "            for e, group in groupby(dataset, key=itemgetter(0))\n",
     "        ]\n",
     "    ]\n",
-    "    df = pd.DataFrame(grouped_by_epoch)\n",
-    "    summary = pd.DataFrame(df.describe().max(axis=1))\n",
+    "    mean_stat = np.array([\n",
+    "        np.array(list(a.values())).mean() for a in grouped_by_epoch\n",
+    "    ])\n",
+    "    \n",
+    "    # Find the epoch with the \"summary_func\" mean statistics\n",
+    "    best_epoch = getattr(mean_stat, 'arg' + summary_func)()\n",
+    "    \n",
+    "    # Now that we have the best epoch, we can take that one and describe\n",
+    "    # statistics about it.\n",
+    "    df = pd.DataFrame([grouped_by_epoch[best_epoch]]).T\n",
+    "    desc = df.describe()\n",
+    "    summary = pd.DataFrame(desc)\n",
     "    summary.columns = [\"Summary\"]\n",
     "    plot = sns.lineplot(*transposed)\n",
     "    plot.set(\n",
@@ -243,6 +253,7 @@
     "                                             xlabel='Epoch',\n",
     "                                             ylabel='Loss',\n",
     "                                             title='Training Loss (with error margins)',\n",
+    "                                             summary_func='min',\n",
     "                                             bbox=[.65,.50,.3,.45])"
    ]
   },
@@ -256,6 +267,7 @@
     "                                           xlabel='Epoch',\n",
     "                                           ylabel='Loss',\n",
     "                                           title='Validation Loss (with error margins)',\n",
+    "                                           summary_func='min',\n",
     "                                           bbox=[.65,.50,.3,.45])"
    ]
   },
