notebooks: Show segmentation mIoU next to segmentation

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "from PIL import Image\n",
     "\n",
+    "from collections import defaultdict\n",
     "from itertools import groupby\n",
     "from operator import itemgetter"
    ]
@@ -277,18 +278,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_max_epoch(statistic):\n",
+    "    return statistic[-1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yield_splitted(iterable):\n",
+    "    for line in iterable:\n",
+    "        yield line.split()\n",
+    "\n",
+    "def maybe_get_segmentation_miou_labels(path):\n",
+    "    epoch_labels = defaultdict(str)\n",
+    "    \n",
+    "    try:\n",
+    "        with open(path, 'r') as f:\n",
+    "            epoch_labels.update({\n",
+    "                int(epoch): 'mIoU: {:.3f}'.format(float(miou))\n",
+    "                for epoch, miou in yield_splitted(f)\n",
+    "            })\n",
+    "    except IOError:\n",
+    "        print('{} does not exist, skipping mIoU labels on images'.format(path))\n",
+    "        pass\n",
+    "\n",
+    "    return epoch_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def visualize_change_in_segmentations(segmentations, image_id, epochs):\n",
     "    \"\"\"Visualize the change in segmentations over the specified epochs\"\"\"\n",
     "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=3, figsize=(12,20))\n",
-    "    source = Image.open(os.path.join(segmentations, 'image_{}.input.png'.format(image_id)))\n",
-    "    label = Image.open(os.path.join(segmentations, 'image_{}.label.png'.format(image_id)))\n",
+    "    source_path = os.path.join(segmentations, 'image_{}.input.png'.format(image_id))\n",
+    "    label_path = os.path.join(segmentations, 'image_{}.label.png'.format(image_id))\n",
+    "\n",
+    "    if not os.path.exists(source_path) or not os.path.exists(label_path):\n",
+    "        print('Source for label path at {} does not exist, skipping'.format(segmentations))\n",
+    "        return None\n",
+    "\n",
+    "    source = Image.open(source_path)\n",
+    "    label = Image.open(label_path)\n",
+    "    \n",
+    "    segementation_mious = maybe_get_segmentation_miou_labels(os.path.join(segmentations,\n",
+    "                                                                          'image_{}.png.log.txt'.format(image_id)))\n",
+    "    \n",
     "    for i, epoch in enumerate(epochs):\n",
     "        epoch_output = Image.open(os.path.join(segmentations, 'image_{}.epoch.{:02d}.png'.format(image_id, epoch)))\n",
     "        ax[i][0].imshow(source)\n",
     "        ax[i][1].imshow(epoch_output)\n",
     "        ax[i][2].imshow(label)\n",
     "        \n",
-    "        ax[i][0].set_ylabel('Epoch {}'.format(epoch), rotation=0, size='large')\n",
+    "        ax[i][0].set_ylabel('Epoch {}\\n'.format(epoch) + segementation_mious[epoch],\n",
+    "                            rotation=0)\n",
     "        \n",
     "    ax[0][0].set_title('Source Image')\n",
     "    ax[0][1].set_title('Network Output')\n",
