notebook: Avoid hardcoding path to experiemnts dir

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -47,8 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXPERIMENT = os.environ.get(\"EXPERIMENT\", \"None\")\n",
-    "INPUT_DIR = os.path.expanduser(\"~/Downloads/experiments/{}\").format(EXPERIMENT)\n",
+    "os.chdir('..')\n",
+    "EXPERIMENT = os.environ.get(\"EXPERIMENT\", \"none\")\n",
+    "INPUT_DIR = os.path.expanduser(\"../experiments/{}\").format(EXPERIMENT)\n",
     "OUTPUT_DIR = \"reports/{}\".format(EXPERIMENT)"
    ]
   },
