plotting: Show training reference images too

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -375,7 +375,9 @@
    "source": [
     "validation_segmentation_0 = visualize_change_in_segmentations(SEGMENTATION_DIR,\n",
     "                                                              0,\n",
-    "                                                              int_all(np.geomspace(1, 499, 6)))"
+    "                                                              int_all(np.geomspace(1,\n",
+    "                                                                                   499,\n",
+    "                                                                                   6)))"
    ]
   },
   {
@@ -386,7 +388,9 @@
    "source": [
     "validation_segmentation_1 = visualize_change_in_segmentations(SEGMENTATION_DIR,\n",
     "                                                              1,\n",
-    "                                                              int_all(np.geomspace(1, 499, 6)))"
+    "                                                              int_all(np.geomspace(1,\n",
+    "                                                                                   499,\n",
+    "                                                                                   6)))"
    ]
   },
   {
@@ -397,7 +401,57 @@
    "source": [
     "validation_segmentation_2 = visualize_change_in_segmentations(SEGMENTATION_DIR,\n",
     "                                                              2,\n",
-    "                                                              int_all(np.geomspace(1, 499, 6)))"
+    "                                                              int_all(np.geomspace(1,\n",
+    "                                                                                   499,\n",
+    "                                                                                   6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_SEGMENTATION_DIR = os.path.join(INPUT_DIR, 'logs', 'interesting', 'segmentations', 'train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_segmentation_0 = visualize_change_in_segmentations(TRAIN_SEGMENTATION_DIR,\n",
+    "                                                         0,\n",
+    "                                                         int_all(np.geomspace(1,\n",
+    "                                                                              499,\n",
+    "                                                                              6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_segmentation_1 = visualize_change_in_segmentations(TRAIN_SEGMENTATION_DIR,\n",
+    "                                                         1,\n",
+    "                                                         int_all(np.geomspace(1,\n",
+    "                                                                              499,\n",
+    "                                                                              6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_segmentation_2 = visualize_change_in_segmentations(TRAIN_SEGMENTATION_DIR,\n",
+    "                                                         2,\n",
+    "                                                         int_all(np.geomspace(1,\n",
+    "                                                                              499,\n",
+    "                                                                              6)))"
    ]
   },
   {
