plotting: Generate legend for VOC classes

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -534,6 +534,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_voc_classes_legend_from_image_colormap(label_path):\n",
+    "    classes = ('background',\n",
+    "               'aeroplane',\n",
+    "               'bicycle',\n",
+    "               'bird',\n",
+    "               'boat',\n",
+    "               'bottle',\n",
+    "               'bus',\n",
+    "               'car',\n",
+    "               'cat',\n",
+    "               'chair',\n",
+    "               'cow',\n",
+    "               'diningtable',\n",
+    "               'dog',\n",
+    "               'horse',\n",
+    "               'motorbike',\n",
+    "               'person',\n",
+    "               'pottedplant',\n",
+    "               'sheep',\n",
+    "               'sofa',\n",
+    "               'train',\n",
+    "               'tvmonitor')\n",
+    "    label_image = Image.open(label_path)\n",
+    "    palette = label_image.getpalette()\n",
+    "\n",
+    "    fig, ax = sns.mpl.pyplot.subplots(ncols=3, nrows=7)\n",
+    "    ax = ax.ravel()\n",
+    "\n",
+    "    for i in range(0, 21):\n",
+    "        im = Image.fromarray(np.array([[i]]).astype('uint8'), mode='P')\n",
+    "        im.putpalette(palette)\n",
+    "        im.resize((100, 100))\n",
+    "        ax[i].set_xticks([])\n",
+    "        ax[i].set_yticks([])\n",
+    "        ax[i].imshow(im)\n",
+    "        ax[i].set_xlabel(classes[i])\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_voc_classes_legend_from_image_colormap('/u/77/spilsbt1/unix/aalto-CS-E4890-deep-learning/project/data/VOCdevkit/VOC2012/SegmentationClass/2007_000033.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def write_experiment_results(output_dir, plots):\n",
     "    for name, plot in plots.items():\n",
     "        fig = plot.get_figure() if plot.get_figure() else plot\n",
