notebooks: Don't die if a plot isn't set

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -592,6 +592,8 @@
    "source": [
     "def write_experiment_results(output_dir, plots):\n",
     "    for name, plot in plots.items():\n",
+    "        if not plot:\n",
+    "            continue\n",
     "        fig = plot.get_figure() if plot.get_figure() else plot\n",
     "        fig.savefig(os.path.join(output_dir, name))"
    ]
