plotting: Also save training images

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -610,6 +610,9 @@
     "    \"train_loss.png\": train_loss_by_epoch_plot,\n",
     "    \"val_loss.png\": val_loss_by_epoch_plot,\n",
     "    \"best_images.png\": best_and_worst,\n",
+    "    \"train_seg0.png\": train_segmentation_0,\n",
+    "    \"train_seg1.png\": train_segmentation_1,\n",
+    "    \"train_seg2.png\": train_segmentation_2,\n",
     "    \"validation_seg0.png\": validation_segmentation_0,\n",
     "    \"validation_seg1.png\": validation_segmentation_1,\n",
     "    \"validation_seg2.png\": validation_segmentation_2\n",
