notebooks: Show mIoU scores on best/worst image

--- a/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
@@ -403,7 +403,7 @@
    "source": [
     "def show_best_and_worst(multiplexer, epochs):\n",
     "    \"\"\"Visualize the best and worst segementations over the specified epochs\"\"\"\n",
-    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=8, figsize=(15,5))\n",
+    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=8, figsize=(10,5))\n",
     "    sorted_images = {\n",
     "        k: sorted_by_step(v) for k, v in\n",
     "        {\n",
@@ -417,23 +417,50 @@
     "            \"validation/best/2\": multiplexer.Images(RUN_TAG, \"validation/best/2\")\n",
     "        }.items()\n",
     "    }\n",
+    "    \n",
+    "    miou_labels = {\n",
+    "        \"worst\": {\n",
+    "            0: maybe_get_segmentation_miou_labels(multiplexer, \"validation/worst/0/mIoU\"),\n",
+    "            1: maybe_get_segmentation_miou_labels(multiplexer, \"validation/worst/1/mIoU\"),\n",
+    "            2: maybe_get_segmentation_miou_labels(multiplexer, \"validation/worst/2/mIoU\"),\n",
+    "        },\n",
+    "        \"middle\": {\n",
+    "            0: maybe_get_segmentation_miou_labels(multiplexer, \"validation/middle/0/mIoU\"),\n",
+    "            1: maybe_get_segmentation_miou_labels(multiplexer, \"validation/middle/1/mIoU\"),\n",
+    "        },\n",
+    "        \"best\": {\n",
+    "            0: maybe_get_segmentation_miou_labels(multiplexer, \"validation/best/0/mIoU\"),\n",
+    "            1: maybe_get_segmentation_miou_labels(multiplexer, \"validation/best/1/mIoU\"),\n",
+    "            2: maybe_get_segmentation_miou_labels(multiplexer, \"validation/best/2/mIoU\"),\n",
+    "        }\n",
+    "    }\n",
     "\n",
     "    for i, epoch in enumerate(epochs):\n",
     "        ax[i][0].imshow(Image.open(io.BytesIO(sorted_images[\"validation/worst/0\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][0].set_xlabel(miou_labels[\"worst\"][0][epoch - 1])\n",
     "        ax[i][1].imshow(Image.open(io.BytesIO(sorted_images[\"validation/worst/1\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][1].set_xlabel(miou_labels[\"worst\"][1][epoch - 1])\n",
     "        ax[i][2].imshow(Image.open(io.BytesIO(sorted_images[\"validation/worst/2\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][2].set_xlabel(miou_labels[\"worst\"][2][epoch - 1])\n",
     "        \n",
     "        ax[i][3].imshow(Image.open(io.BytesIO(sorted_images[\"validation/middle/0\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][3].set_xlabel(miou_labels[\"middle\"][0][epoch - 1])\n",
     "        ax[i][4].imshow(Image.open(io.BytesIO(sorted_images[\"validation/middle/1\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][4].set_xlabel(miou_labels[\"middle\"][1][epoch - 1])\n",
     "\n",
     "        ax[i][5].imshow(Image.open(io.BytesIO(sorted_images[\"validation/best/0\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][5].set_xlabel(miou_labels[\"best\"][0][epoch - 1])\n",
     "        ax[i][6].imshow(Image.open(io.BytesIO(sorted_images[\"validation/best/1\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][6].set_xlabel(miou_labels[\"best\"][1][epoch - 1])\n",
     "        ax[i][7].imshow(Image.open(io.BytesIO(sorted_images[\"validation/best/2\"][epoch - 1].encoded_image_string)))\n",
+    "        ax[i][7].set_xlabel(miou_labels[\"best\"][2][epoch - 1])\n",
     "\n",
     "        for j in range(0, 8):\n",
-    "            ax[i][j].get_xaxis().set_visible(False)\n",
+    "            ax[i][j].get_xaxis().set_ticks([])\n",
     "            ax[i][j].get_yaxis().set_ticks([])\n",
     "\n",
+    "        ax[i][0].set_ylabel('Epoch {}'.format(epoch), rotation=0, size='large', labelpad=40)\n",
+    "    \n",
     "    ax[0][0].set_title('Worst 1')\n",
     "    ax[0][1].set_title('Worst 2')\n",
     "    ax[0][2].set_title('Worst 3')\n",
