notebooks: Move to showing overlay segmentations on legacy plotting notebook

--- a/segmention_with_channel_regularization/notebooks/plotting.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting.ipynb
@@ -27,6 +27,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sys.path.append(\"..\")\n",
+    "from utils.visualization import overlay_segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.set_option('precision', 3)"
    ]
   },
@@ -317,7 +327,7 @@
    "source": [
     "def visualize_change_in_segmentations(segmentations, image_id, epochs):\n",
     "    \"\"\"Visualize the change in segmentations over the specified epochs\"\"\"\n",
-    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=3, figsize=(12,20))\n",
+    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=1, figsize=(12,20))\n",
     "    source_path = os.path.join(segmentations, 'image_{}.input.png'.format(image_id))\n",
     "    label_path = os.path.join(segmentations, 'image_{}.label.png'.format(image_id))\n",
     "\n",
@@ -325,25 +335,32 @@
     "        print('Source for label path at {} does not exist, skipping'.format(segmentations))\n",
     "        return None\n",
     "\n",
-    "    source = Image.open(source_path)\n",
-    "    label = Image.open(label_path)\n",
+    "    source = Image.open(source_path).convert('RGB')\n",
+    "    label = Image.open(label_path).convert('RGB')\n",
+    "    label_source_overlay = overlay_segmentation(source, label, blend_alpha=0.5)\n",
     "    \n",
     "    segementation_mious = maybe_get_segmentation_miou_labels(os.path.join(segmentations,\n",
     "                                                                          'image_{}.png.log.txt'.format(image_id)))\n",
     "    \n",
     "    for i, epoch in enumerate(epochs):\n",
     "        epoch_output = Image.open(os.path.join(segmentations, 'image_{}.epoch.{:02d}.png'.format(image_id, epoch)))\n",
-    "        ax[i][0].imshow(source)\n",
-    "        ax[i][1].imshow(epoch_output)\n",
-    "        ax[i][2].imshow(label)\n",
+    "        output_source_overlay = overlay_segmentation(source, epoch_output, blend_alpha=0.5)\n",
+    "\n",
+    "        ax[i].imshow(np.concatenate([\n",
+    "            label_source_overlay,\n",
+    "            output_source_overlay\n",
+    "        ], axis=1))\n",
     "        \n",
-    "        ax[i][0].set_ylabel('Epoch {}\\n'.format(epoch) + segementation_mious[epoch],\n",
-    "                            rotation=0)\n",
+    "        ax[i].set_ylabel('Epoch {}\\n'.format(epoch) + segementation_mious[epoch],\n",
+    "                            rotation=0,\n",
+    "                            labelpad=60.0)\n",
+    "\n",
+    "        ax[i].get_xaxis().set_visible(False)\n",
+    "        ax[i].get_yaxis().set_ticks([])\n",
     "        \n",
-    "    ax[0][0].set_title('Source Image')\n",
-    "    ax[0][1].set_title('Network Output')\n",
-    "    ax[0][2].set_title('Label')\n",
+    "    ax[0].set_title('Segmentation')\n",
     "    \n",
+    "    fig.tight_layout()\n",
     "    fig.show()\n",
     "    return fig"
    ]
@@ -460,40 +477,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def pick_best_worst(interesting, tag, number, epoch):\n",
+    "    \"\"\"Create overlaid images for best/worst images.\"\"\"\n",
+    "    source = Image.open(os.path.join(interesting, 'image.{}.{}.epoch{:02d}.input.png'.format(tag, number, epoch))).convert('RGB')\n",
+    "    label = Image.open(os.path.join(interesting, 'image.{}.{}.epoch{:02d}.label.png'.format(tag, number, epoch))).convert('RGB')\n",
+    "    segmentation = Image.open(os.path.join(interesting, 'image.{}.{}.epoch{:02d}.segmentation.png'.format(tag, number, epoch))).convert('RGB')\n",
+    "    \n",
+    "    label_source_overlay = overlay_segmentation(source, label)\n",
+    "    output_source_overlay = overlay_segmentation(source, segmentation)\n",
+    "    \n",
+    "    return np.concatenate([\n",
+    "        label_source_overlay,\n",
+    "        output_source_overlay\n",
+    "    ], axis=1)\n",
+    "\n",
+    "\n",
     "def show_best_and_worst(interesting, epochs):\n",
     "    \"\"\"Visualize the best and worst segementations over the specified epochs\"\"\"\n",
-    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs) * 3, ncols=8, figsize=(15,20))\n",
+    "    fig, ax = sns.mpl.pyplot.subplots(nrows=len(epochs), ncols=8, figsize=(10,5))\n",
+    "    \n",
+    "    miou_labels = {\n",
+    "        \"worst\": {\n",
+    "            0: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.worst.0.png.log.txt')),\n",
+    "            1: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.worst.1.png.log.txt')),\n",
+    "            2: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.worst.2.png.log.txt'))\n",
+    "        },\n",
+    "        \"middle\": {\n",
+    "            0: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.middle.0.png.log.txt')),\n",
+    "            1: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.middle.1.png.log.txt'))\n",
+    "        },\n",
+    "        \"best\": {\n",
+    "            0: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.best.0.png.log.txt')),\n",
+    "            1: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.best.1.png.log.txt')),\n",
+    "            2: maybe_get_segmentation_miou_labels(os.path.join(interesting,\n",
+    "                                                               'image.best.2.png.log.txt'))\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
     "    for i, epoch in enumerate(epochs):\n",
-    "        ax[i * 3 + 0][0].imshow(Image.open(os.path.join(interesting, 'image.worst.0.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][1].imshow(Image.open(os.path.join(interesting, 'image.worst.1.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][2].imshow(Image.open(os.path.join(interesting, 'image.worst.2.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][3].imshow(Image.open(os.path.join(interesting, 'image.middle.0.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][4].imshow(Image.open(os.path.join(interesting, 'image.middle.1.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][5].imshow(Image.open(os.path.join(interesting, 'image.best.0.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][6].imshow(Image.open(os.path.join(interesting, 'image.best.1.epoch{:02d}.input.png'.format(epoch))))\n",
-    "        ax[i * 3 + 0][7].imshow(Image.open(os.path.join(interesting, 'image.best.2.epoch{:02d}.input.png'.format(epoch))))\n",
+    "        ax[i][0].imshow(pick_best_worst(interesting, \"worst\", 0, epoch))\n",
+    "        ax[i][0].set_xlabel(miou_labels[\"worst\"][0][epoch])\n",
+    "        ax[i][1].imshow(pick_best_worst(interesting, \"worst\", 1, epoch))\n",
+    "        ax[i][1].set_xlabel(miou_labels[\"worst\"][1][epoch])\n",
+    "        ax[i][2].imshow(pick_best_worst(interesting, \"worst\", 2, epoch))\n",
+    "        ax[i][2].set_xlabel(miou_labels[\"worst\"][2][epoch])\n",
+    "        \n",
+    "        ax[i][3].imshow(pick_best_worst(interesting, \"middle\", 0, epoch))\n",
+    "        ax[i][3].set_xlabel(miou_labels[\"middle\"][0][epoch])\n",
+    "        ax[i][4].imshow(pick_best_worst(interesting, \"middle\", 1, epoch))\n",
+    "        ax[i][4].set_xlabel(miou_labels[\"middle\"][1][epoch])\n",
+    "        \n",
+    "        ax[i][5].imshow(pick_best_worst(interesting, \"best\", 0, epoch))\n",
+    "        ax[i][5].set_xlabel(miou_labels[\"best\"][0][epoch])\n",
+    "        ax[i][6].imshow(pick_best_worst(interesting, \"best\", 1, epoch))\n",
+    "        ax[i][6].set_xlabel(miou_labels[\"best\"][1][epoch])\n",
+    "        ax[i][7].imshow(pick_best_worst(interesting, \"best\", 2, epoch))\n",
+    "        ax[i][7].set_xlabel(miou_labels[\"best\"][2][epoch])\n",
     "\n",
-    "        ax[i * 3 + 1][0].imshow(Image.open(os.path.join(interesting, 'image.worst.0.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][1].imshow(Image.open(os.path.join(interesting, 'image.worst.1.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][2].imshow(Image.open(os.path.join(interesting, 'image.worst.2.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][3].imshow(Image.open(os.path.join(interesting, 'image.middle.0.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][4].imshow(Image.open(os.path.join(interesting, 'image.middle.1.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][5].imshow(Image.open(os.path.join(interesting, 'image.best.0.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][6].imshow(Image.open(os.path.join(interesting, 'image.best.1.epoch{:02d}.segmentation.png'.format(epoch))))\n",
-    "        ax[i * 3 + 1][7].imshow(Image.open(os.path.join(interesting, 'image.best.2.epoch{:02d}.segmentation.png'.format(epoch))))\n",
+    "        for j in range(0, 8):\n",
+    "            ax[i][j].get_xaxis().set_ticks([])\n",
+    "            ax[i][j].get_yaxis().set_ticks([])\n",
     "\n",
-    "        ax[i * 3 + 2][0].imshow(Image.open(os.path.join(interesting, 'image.worst.0.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][1].imshow(Image.open(os.path.join(interesting, 'image.worst.1.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][2].imshow(Image.open(os.path.join(interesting, 'image.worst.2.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][3].imshow(Image.open(os.path.join(interesting, 'image.middle.0.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][4].imshow(Image.open(os.path.join(interesting, 'image.middle.1.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][5].imshow(Image.open(os.path.join(interesting, 'image.best.0.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][6].imshow(Image.open(os.path.join(interesting, 'image.best.1.epoch{:02d}.label.png'.format(epoch))))\n",
-    "        ax[i * 3 + 2][7].imshow(Image.open(os.path.join(interesting, 'image.best.2.epoch{:02d}.label.png'.format(epoch))))\n",
-    "\n",
-    "        ax[i * 3 + 0][0].set_ylabel('E{} Input'.format(epoch), rotation=0, size='large')\n",
-    "        ax[i * 3 + 1][0].set_ylabel('E{} Seg'.format(epoch), rotation=0, size='large')\n",
-    "        ax[i * 3 + 2][0].set_ylabel('E{} Label'.format(epoch), rotation=0, size='large')\n",
+    "        ax[i][0].set_ylabel('Epoch {}'.format(epoch),\n",
+    "                            rotation=0,\n",
+    "                            size='large',\n",
+    "                            labelpad=40)\n",
     "\n",
     "    ax[0][0].set_title('Worst 1')\n",
     "    ax[0][1].set_title('Worst 2')\n",
@@ -525,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_and_worst = show_best_and_worst(INTERESTING_DIR, int_all(np.geomspace(1, 499, 3)))"
+    "best_and_worst = show_best_and_worst(INTERESTING_DIR, int_all(np.geomspace(1, 499, 6)))"
    ]
   },
   {
