notebook: Revert back to using normal dataset

--- a/segmention_with_channel_regularization/notebooks/notebook.ipynb
+++ b/segmention_with_channel_regularization/notebooks/notebook.ipynb
@@ -71,8 +71,8 @@
     "DATA_PATHS = {\n",
     "    'source': os.path.join('../../data/VOCdevkit/VOC2012/JPEGImages'),\n",
     "    'segmentation': os.path.join('../../data/VOCdevkit/VOC2012/SegmentationClass'),\n",
-    "    'train': os.path.join('../../data/VOCdevkit/VOC2012/ImageSets/Segmentation/train.reallysmall.txt'),\n",
-    "    'val': os.path.join('../../data/VOCdevkit/VOC2012/ImageSets/Segmentation/val.dev.txt')\n",
+    "    'train': os.path.join('../../data/VOCdevkit/VOC2012/ImageSets/Segmentation/train.txt'),\n",
+    "    'val': os.path.join('../../data/VOCdevkit/VOC2012/ImageSets/Segmentation/val.txt')\n",
     "}"
    ]
   },
