notebooks: Add n_epochs helper and use it to determine epochs for plotting funcs
This is much better than having to specify it ourselves all the time.

--- a/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
+++ b/segmention_with_channel_regularization/notebooks/plotting_tensorboard.ipynb
@@ -293,7 +293,10 @@
    "outputs": [],
    "source": [
     "def int_all(array):\n",
-    "    return [int(np.round(a)) for a in array]"
+    "    return [int(np.round(a)) for a in array]\n",
+    "\n",
+    "def n_epochs(multiplexer, scalar_event):\n",
+    "    return max([e.step for e in multiplexer.Scalars(RUN_TAG, scalar_event)])"
    ]
   },
   {
@@ -311,10 +314,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "N_EPOCHS = n_epochs(multiplexer, \"train/reference/0/mIoU\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "validation_segmentation_0 = visualize_change_in_segmentations(multiplexer,\n",
     "                                                              0,\n",
     "                                                              int_all(np.geomspace(1,\n",
-    "                                                                                   30,\n",
+    "                                                                                   N_EPOCHS,\n",
     "                                                                                   6)))"
    ]
   },
@@ -327,7 +339,7 @@
     "validation_segmentation_1 = visualize_change_in_segmentations(multiplexer,\n",
     "                                                              1,\n",
     "                                                              int_all(np.geomspace(1,\n",
-    "                                                                                   30,\n",
+    "                                                                                   N_EPOCHS,\n",
     "                                                                                   6)))"
    ]
   },
@@ -362,7 +374,7 @@
     "train_segmentation_0 = visualize_change_in_segmentations(multiplexer,\n",
     "                                                         0,\n",
     "                                                         int_all(np.geomspace(1,\n",
-    "                                                                              100,\n",
+    "                                                                              N_EPOCHS,\n",
     "                                                                              6)),\n",
     "                                                         set_name=\"train\")"
    ]
@@ -376,7 +388,7 @@
     "train_segmentation_1 = visualize_change_in_segmentations(multiplexer,\n",
     "                                                         1,\n",
     "                                                         int_all(np.geomspace(1,\n",
-    "                                                                              100,\n",
+    "                                                                              N_EPOCHS,\n",
     "                                                                              6)),\n",
     "                                                         set_name=\"train\")"
    ]
